[package]
name = "lwm2m-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap-server = "0.1"
coap-lite = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde-querystring = "0.2.1"
serde_plain = "1.0.2"
tokio = { version = "1.29", features = ["full"]}
rand = "0.8.5"

